2007-01-25  Nate Nielsen  <nielsen@memberwebs.com>

	* libseahorse/seahorse-add-keyserver.glade:
	* libseahorse/seahorse-secure-entry.c:
	* src/seahorse-add-uid.glade:
	* src/seahorse-change-passphrase.glade:
	* src/seahorse-gkeyring-item-properties.glade:
	* src/seahorse-key-manager.glade:
	* src/seahorse-keyserver-search.glade:
	* src/seahorse-multi-encrypt.glade:
	* src/seahorse-pgp-generate.glade:
	* src/seahorse-revoke.glade:
	* src/seahorse-ssh-generate.glade:
	* src/seahorse-ssh-key-properties.glade:
	* src/seahorse-ssh-upload.glade: Get invisible character from 
	GtkEntry, remove hard coded invisible char in glade. 
	Patches by Fixes bug #393218

2007-01-11  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-gkeyring-item-properties.c: Fix showing passwords.
    Patch by Sertaç Ö. Yıldız.  Fixes bug #393366

2007-01-04  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS: 
    * README: Version 0.9.10
    * configure.in: Bump version number

2007-01-03  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-gkeyring-operation.c:
    * src/seahorse-gkeyring-source.c: Fix assertion when no keyring exists.
    Fixes bug #391699

2007-01-03  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * libseahorse/seahorse-gtkstock.c:
    * pixmaps/Makefile.am:
    * pixmaps/scaleable: (moved from)
    * pixmaps/scalable: (moved to)
    * pixmaps/scalable/Makefile.am: Move 'scaleable' pixmaps directory 
    to 'scalable'. Fixes bug #391700
	
2006-12-30  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-key-properties.c: Add check for remote key.
    Fixes bug #363350

2006-12-22  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-context.c: Fix idle callback that was 
    repeatedly loading keys. Fixes bug #387402

2006-12-21  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key.c: Add strikethrough for expired, 
    revoked, disabled keys. Patch by Adam Schreiber. Fixes bug #357323
    