@@ -1,3 +1,8 @@
+2007-01-27  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * agent/seahorse-agent-cache.c: Fix crasher during symmetric encryption
+    Fixes bug #396009
+ 
 2007-01-25  Nate Nielsen  <nielsen@memberwebs.com>
 
 	* libseahorse/seahorse-add-keyserver.glade:
@@ -14,7 +19,7 @@
 	* src/seahorse-ssh-key-properties.glade:
 	* src/seahorse-ssh-upload.glade: Get invisible character from 
 	GtkEntry, remove hard coded invisible char in glade. 
-	Patches by Fixes bug #393218
+	Patch by Vitaliy Ischenko. Fixes bug #393218
 
 2007-01-11  Adam Schreiber  <sadam@clemson.edu>
 
